docs/7.52/md/abapprovide_obsolete.md
---
title: "PROVIDE - Short Form"
description: |
  This statement should be used by specialists only. In-depth knowledge of the corresponding environment is essential. This environment is not part of ABAP and is not documented here. Quick Reference(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapprovide_shortref.htm) Obsolete Syntax
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapprovide_obsolete.htm"
abapFile: "abapprovide_obsolete.htm"
keywords: ["loop", "do", "if", "try", "class", "data", "types", "internal-table", "abapprovide", "obsolete"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Obsolete Language Elements](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_obsolete.htm) →  [Obsolete Processing of Internal Data](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendata_internal_obsolete.htm) →  [Obsolete Internal Table Processing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenitab_obsolete.htm) → 

PROVIDE - Short Form

This statement should be used by specialists only.
In-depth knowledge of the corresponding environment is essential.
This environment is not part of ABAP and is not documented here.

[Quick Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapprovide_shortref.htm)

Obsolete Syntax

PROVIDE *{*\**|**{*comp1 comp2 ...*}**}* FROM itab1
        *{*\**|**{*comp1 comp2 ...*}**}* FROM itab2
        ...
        BETWEEN extliml AND extlimu.

Effect

This form of the statement PROVIDE, not permitted in classes, is a short form of the permitted [variant](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapprovide.htm). The compiler distinguishes the long and short forms by the additions FIELDS, to be specified explicitly before the components.

The short form is exclusively intended for editing internal tables for HR [info types](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abeninfo_type_glosry.htm "Glossary Entry"), which have been declared with the special statement [INFOTYPES](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapinfotypes.htm) or which have the same structure.

In principle, the short form of the statement PROVIDE works like the permitted [variant](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapprovide.htm). Unlike the permitted [variant](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapprovide.htm), however, fewer additions are allowed here. In the short form, a table cannot be specified more than once. The internal tables must have [header lines](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenheader_line_glosry.htm "Glossary Entry") and the additions that have to be specified in the long form are enhanced in the short form by the runtime environment, as described below.

For the PROVIDE loop to function correctly, the same conditions apply as in the [long form](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapprovide.htm). However, no exceptions are raised if one of the involved tables is not sorted or if there are overlapping intervals.

Interval limits BOUNDS

The columns for interval limits to be specified in the [long form](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapprovide.htm) as intlim1 and intlim2 using BOUNDS are attributes of the relevant tables in the short form and must be specified when they are declared.

This is done using the addition VALID BETWEEN that can be specified after DATA ENDOF if an internal table is declared with the obsolete addition OCCURS of the statement DATA BEGIN OF. If an internal table is declared using the statement [INFOTYPES](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapinfotypes.htm), these are the BEGDA and ENDDA columns. If no columns are specified for the interval limits in the declaration, the short form of PROVIDE uses the first two columns of the internal table.

Work area INTO

In the short form, the headers of the internal table are used implicitly for the work areas that have to be specified as wa in the [long form](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapprovide.htm) using the addition INTO.

Flag VALID

For the data objects that have to be specified as flag in the [long form](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapprovide.htm) using the addition VALID, a data object itab\_valid of type c and length 1 is created in the short form for every table itab.

Condition WHERE

No conditions can be specified in the short form.

Addition INCLUDING GAPS

In the short form, the PROVIDE loop cannot be forced for every interval.

Note

The system fields sy-tabix and sy-subrc are not filled by the short form for PROVIDE - ENDPROVIDE.

Example

This example has the same result as the example for the [long form](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapprovide.htm). Here, the tables itab1 and itab2 have header lines and the columns col1 and col2 are defined as interval limits of type i using the addition VALID of the statement DATA END OF.

DATA: BEGIN OF itab1 OCCURS 0,
        col1 TYPE i,
        col2 TYPE i,
        col3 TYPE string,
      END OF itab1 VALID BETWEEN col1 AND col2.
DATA: BEGIN OF itab2 OCCURS 0,
        col1 TYPE i,
        col2 TYPE i,
        col3 TYPE string,
      END OF itab2 VALID BETWEEN col1 AND col2.
itab1-col1 = 1.
itab1-col2 = 6.
itab1-col3 = 'Itab1 Int1'.
APPEND itab1 TO itab1.
itab1-col1 = 9.
itab1-col2 = 12.
itab1-col3 = 'Itab1 Int2'.
APPEND itab1 TO itab1.
itab2-col1 = 4.
itab2-col2 = 11.
itab2-col3 = 'Itab2 Int1'.
APPEND itab2 TO itab2.
DATA output TYPE TABLE OF string WITH EMPTY KEY.
PROVIDE col3 FROM itab1
        col3 FROM itab2
             BETWEEN 2 AND 14.
  APPEND | { itab1-col1 WIDTH = 2 } { itab1-col2 WIDTH = 2 } {
             itab1-col3 } { itab1\_valid } | TO output.
  APPEND | { itab2-col1 WIDTH = 2 } { itab2-col2 WIDTH = 2 } {
             itab2-col3 } { itab2\_valid } | TO output.
  APPEND INITIAL LINE TO output.
ENDPROVIDE.
cl\_demo\_output=>display( output ).